--- a/roles/splunk-forwarder-linux/handlers/main.yml
+++ b/roles/splunk-forwarder-linux/handlers/main.yml
@@ -1,7 +1,12 @@
 ---
-  - name: Enable Splunk Forwarder
-    service:
-      name: splunkd
-      enabled: yes
-      state: started
-  
+- name: splunkforwarder #Enable Splunk Forwarder
+  service:
+    name: splunkd
+    enabled: yes
+    state: started
+
+# handlers file for splunk_forwarder
+- name: restart splunkforwarder
+  service:
+    name: splunk
+    state: restarted
