--- a/roles/splunk-forwarder-linux/tasks/main.yml
+++ b/roles/splunk-forwarder-linux/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for jenkins-instalation
+# tasks file for splunk forwarder-installation
 - name: add splunk user group to system
   group:
     name: "{{ splunk_uf_system_group }}"
