--- a/roles/splunk-forwarder-linux/defaults/main.yml
+++ b/roles/splunk-forwarder-linux/defaults/main.yml
@@ -37,13 +37,21 @@ splunk_webserver_inputs_conf_template: libertyappserver-conf/inputs.conf.j2
 splunk_uf_inputs_default_host: ""
 # The global default is $decideOnStartup, which will look at the current ipv4 address and supply that in the form
 # of ip-10-x-x-x
-splunk_uf_inputs_default_index: ""
-splunk_uf_inputs_default_extra_attributes: ""
+splunk_uf_webserver_inputs_default_index: ""
+splunk_uf_webserver_inputs_default_extra_attributes: ""
 # Example of extra attributes within the default stanza:
 #   splunk_uf_inputs_default_extra_options: |
 #     whitelist = \.log$
 #     ignoreOlderThan = 7
-splunk_uf_inputs_monitors: []
+
+splunk_uf_appserver_inputs_default_index: ""
+splunk_uf_appserver_inputs_default_extra_attributes: ""
+# Example of extra attributes within the default stanza:
+#   splunk_uf_inputs_default_extra_options: |
+#     whitelist = \.log$
+#     ignoreOlderThan = 7
+
+splunk_uf_webserver_inputs_monitors: []
 # Example monitor:
 #   splunk_uf_inputs_monitors:
 #     - path: /var/log # leading // is included by template
@@ -53,7 +61,17 @@ splunk_uf_inputs_monitors: []
 #       ignoreOlderThan: 7
 #       recursive: false
 
-splunk_uf_inputs_additional_forwarders: ""
+splunk_uf_appserver_inputs_monitors: []
+# Example monitor:
+#   splunk_uf_inputs_monitors:
+#     - path: /var/log # leading // is included by template
+#       # These properties are only added if defined
+#       whitelist: \.log$
+#       blacklist: \.gz$
+#       ignoreOlderThan: 7
+#       recursive: false
+
+splunk_uf_webserver_inputs_additional_forwarders: ""
 # Forwarders other than monitors, like:
 #   splunk_uf_inputs_additional_forwarders: |
 #     [tcp://:9995]
@@ -61,10 +79,13 @@ splunk_uf_inputs_additional_forwarders: ""
 #     sourcetype = log4j
 #     source = tcp:9995
 
-
-
-
-
+splunk_uf_appserver_inputs_additional_forwarders: ""
+# Forwarders other than monitors, like:
+#   splunk_uf_inputs_additional_forwarders: |
+#     [tcp://:9995]
+#     connection_host = dns
+#     sourcetype = log4j
+#     source = tcp:9995
 
 
 # Configuration for outputs.conf
