--- a/roles/splunk-forwarder-linux/tasks/main.yml
+++ b/roles/splunk-forwarder-linux/tasks/main.yml
@@ -10,7 +10,7 @@
     name: "{{ splunk_uf_system_user }}"
     group: "{{ splunk_uf_system_group }}"
     comment: "Splunk service user"
-    shell: /usr/sbin/nologin    # Why this script
+    shell: /usr/sbin/nologin   
 
 - name: install splunk forwarder binary from remote url
   unarchive:
@@ -29,7 +29,6 @@
   
 - name: enable boot-start
   shell: "/opt/splunkforwarder/bin/splunk enable boot-start -user {{ splunk_uf_system_user}}"
-  #when: splunk_uf_start_on_boot|bool
   become: yes
 
 - name: install inputs.conf for webserver
@@ -40,7 +39,6 @@
     group: "{{ splunk_uf_system_group }}"
     backup: yes
     mode: 0644
-  #when: splunk_liberty_webserver_inputs_conf_template | default(false)
   notify:
     - restart splunkforwarder
 
@@ -52,7 +50,6 @@
     group: "{{ splunk_uf_system_group }}"
     backup: yes
     mode: 0644
-  #when: splunk_liberty_appserver_outputs_conf_template | default(false)
   notify:
     - restart splunkforwarder
     
